# qt-minimal

./: CMakeLists.txt  MainWindow.cpp  MainWindow.h  QCookDishes.cpp  QCookDishes.h  QKiTest.cpp  QKiTest.hpp  QMyMainWindow.cpp  QMyMainWindow.h  license.txt  main.cpp  readme.md
cmake/: WinDeployQt.cmake
dishlib/: AbstractDish.h  CMakeLists.txt  DishBratwurst.cpp  DishBratwurst.h  DishFactory.h.in  DishPizzaMargherita.cpp  DishPizzaMargherita.h  DishVegetableSoup.cpp  DishVegetableSoup.h
